welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value estSurMessage
var estSurMessage():Boolean = false
    ^BDRBuggle:42: error: value update is not a member of Boolean
											estSurMessage() = true;	
                                                                                        ^